refined toast UI , navbar profile and spacing issues on tables

--- a/src/app/shared/toast/toast.component.scss
+++ b/src/app/shared/toast/toast.component.scss
@@ -6,7 +6,11 @@
   z-index: 2000 !important;
   border-radius: 10px !important;
   overflow: hidden;
+  border: 3px solid #fff;
   box-shadow: 5px 5px 10px 0 #0002;
   font-size: 0.9rem;
 //   mask: linear-gradient(to right, red, #000 90%);
+  .fa-solid{
+    font-size: 1rem;
+  }
 }
